# WakeyPy

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/wakeypy/: spinning.py
