[tool.poetry]
name = "wakeypy"
version = "0.1.0"
description = ""
authors = ["Evan Baird <evanbaird@evans-mbp.lan>"]
readme = "README.md"
packages = [{include = "wakeypy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
wakepy = "^0.9.1"
typer = "^0.12.3"
terminaltexteffects = "^0.10.1"
rich = "^13.7.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ipython = "^8.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
